Fix loading spinner not centered

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -22,7 +22,6 @@ time, mark, audio, video {
 
 html {
   font-size: 16px;
-  min-width: 576px;
 }
 
 body {
@@ -67,6 +66,9 @@ a, a:hover, a:focus {
   height: 100%;
   position: fixed;
   z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .loading-container::before {
@@ -81,11 +83,6 @@ a, a:hover, a:focus {
 
 .loading-spinner {
   color: $green;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
   position: fixed;
   z-index: 100;
   opacity: 1;
